--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/brand/logo_round.png" />
+    <link rel="icon" href="%PUBLIC_URL%/brand/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1e4a8a" />
     <meta
@@ -11,11 +11,11 @@
       color="#1e4a8a"
       content="CSIT-101 course website, attempt of recreation."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/pyodide/v0.18.1/full/pyodide.js"></script>
-    
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2W8TV1DRYK"></script>
     <script>
       const currentVersion = '2.3';
       
@@ -45,7 +45,7 @@
 
       window.addEventListener('load', startVersionCheck);
   </script>
-    <title>Arltools</title>
+    <title>CSIT101 - WNE</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
